--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@xyflow/react": "^12.9.3",
     "convex": "^1.29.3",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
